syntax = "proto3";

package api.shortener;

option go_package = "github.com/kaspeya/go-url-shortener/pkg/shortener";

service Shortener {
  rpc GetShortUrl (GetShortUrlRequest) returns (GetShortUrlResponse);
  rpc GetOriginalUrl (GetOriginalUrlRequest) returns (GetOriginalUrlResponse);
}

message GetShortUrlRequest {
    string original_url = 1;
} 

message GetShortUrlResponse {
    string short_url = 1;
}

message GetOriginalUrlRequest {
    string short_url = 1;
} 

message GetOriginalUrlResponse {
    string original_url = 1;
}